<resources>
    <string name="app_name">Photos</string>

    <string name="saved_access_token_key" translatable="false">access_token</string>

    <string name="log_in">LOG IN</string>
    <string name="mobilization">MOBILIZATION</string>

    <string name="access_denied">Access denied</string>
    <string name="no_network_message">No internet connection</string>

    <string name="image_counter">%1$d of %2$d</string>

    <string name="action_about">About</string>

    <string name="app_description">Test application for</string>
    <string name="link" translatable="false"><a href="https://www.academy.yandex.ru">academy.yandex.ru</a></string>
    <string name="author_title">Author</string>
    <string name="author_name">Bendezu Vladislav</string>
    <string name="year" translatable="false">2018</string>
    <string name="github_link" translatable="false">https://github.com/bendezu/mobilization-gallery</string>

    <string name="progress_title">Processing image …</string>
    <string name="share_image_chooser_title">Share image</string>


    <!-- ******************************
    CONTENT DESCRIPTIONS
    *********************************-->
    <string name="photos_logo_desc">Photos app logo</string>
    <string name="yandex_logo_desc">Yandex logo</string>
    <string name="disk_logo_desc">Yandex.Disk logo</string>
    <string name="author_photo_desc">Author photo</string>
    <string name="github_logo_desc">Github logo</string>
    <string name="back_button_desc">Back button</string>
    <string name="share_button_desc">Share button</string>
    <string name="image_desc">Your image</string>

</resources>
